timer now displays as title and on screen, fixed text overlap in css

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ body, html{
 .content{
   width:100%;
   padding:10px;
-  height:75%;
+  height:100%;
   box-sizing:border-box;
   padding:10px;
 }
